--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://MyWorkSpace26.github.io/todo-list-React",
+  "homepage": ".",
   "name": "todo-list",
   "version": "0.1.0",
   "private": true,
